--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -9,9 +9,14 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
+      - name: Setup PHP with PECL extension
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.3'
+
       - uses: actions/checkout@v2
 
       - name: Validate composer.json and composer.lock
