--- a/.env
+++ b/.env
@@ -18,3 +18,7 @@
 APP_ENV=dev
 APP_SECRET=faee9b6e06eeb52e7211b52c7bd85266
 ###< symfony/framework-bundle ###
+
+###> sentry/sentry-symfony ###
+SENTRY_DSN=
+###< sentry/sentry-symfony ###
