--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "phpunit/phpunit": "^10",
+        "sentry/sentry-symfony": "^4.13",
         "symfony/console": "7.0.*",
         "symfony/dotenv": "7.0.*",
         "symfony/flex": "^2",
