--- a/.env
+++ b/.env
@@ -24,3 +24,7 @@ SENTRY_DSN=
 ###< sentry/sentry-symfony ###
 
 PROXY=
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
