--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "phpunit/phpunit": "^10",
         "sentry/sentry-symfony": "^4.13",
         "symfony/console": "7.0.*",
+        "symfony/dom-crawler": "7.0.*",
         "symfony/dotenv": "7.0.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.0.*",
