--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -34,10 +34,16 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-${{ matrix.platform }}
       - name: Push to Docker Hub
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v5
         with:
-          push: true
           platforms: ${{ matrix.platform }}
-          tags: ${{ secrets.DOCKERHUB_REPOSITORY }}:php-hdrezka-latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
+          outputs: type=image,name=${{ secrets.DOCKERHUB_REPOSITORY }}:php-hdrezka-latest,push-by-digest=true,name-canonical=true,push=true
+      - name: Upload digest
+        uses: actions/upload-artifact@v3
+        with:
+          name: digests
+          path: /tmp/digests/*
+          if-no-files-found: error
+          retention-days: 1
