--- a/.env
+++ b/.env
@@ -28,3 +28,5 @@ PROXY=
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+REDIS_URL=redis://redis
