--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "ext-iconv": "*",
         "nelmio/cors-bundle": "^2.4",
         "phpunit/phpunit": "^10",
+        "predis/predis": "^2.2",
         "sentry/sentry-symfony": "^4.13",
+        "symfony/cache": "7.0.*",
         "symfony/console": "7.0.*",
         "symfony/css-selector": "7.0.*",
         "symfony/dom-crawler": "7.0.*",
