--- a/composer.json
+++ b/composer.json
@@ -13,17 +13,17 @@
         "phpunit/phpunit": "^10",
         "predis/predis": "^2.2",
         "sentry/sentry-symfony": "^4.13",
-        "symfony/cache": "7.0.*",
-        "symfony/console": "7.0.*",
-        "symfony/css-selector": "7.0.*",
-        "symfony/dom-crawler": "7.0.*",
-        "symfony/dotenv": "7.0.*",
+        "symfony/cache": "7.1.*",
+        "symfony/console": "7.1.*",
+        "symfony/css-selector": "7.1.*",
+        "symfony/dom-crawler": "7.1.*",
+        "symfony/dotenv": "7.1.*",
         "symfony/flex": "^2",
-        "symfony/framework-bundle": "7.0.*",
-        "symfony/http-client": "7.0.*",
-        "symfony/phpunit-bridge": "^7.0",
-        "symfony/runtime": "7.0.*",
-        "symfony/yaml": "7.0.*"
+        "symfony/framework-bundle": "7.1.*",
+        "symfony/http-client": "7.1.*",
+        "symfony/phpunit-bridge": "7.1.*",
+        "symfony/runtime": "7.1.*",
+        "symfony/yaml": "7.1.*"
     },
     "config": {
         "allow-plugins": {
@@ -71,11 +71,11 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "7.0.*"
+            "require": "7.1.*"
         }
     },
     "require-dev": {
-        "symfony/browser-kit": "7.0.*",
+        "symfony/browser-kit": "7.1.*",
         "symfony/maker-bundle": "^1.52"
     }
 }
