--- a/composer.json
+++ b/composer.json
@@ -75,6 +75,7 @@
         }
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.76",
         "symfony/browser-kit": "7.3.*",
         "symfony/maker-bundle": "^1.52"
     }
