--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -9,13 +9,13 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Setup PHP with PECL extension
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.3'
+          php-version: '8.4'
 
       - uses: actions/checkout@v2
 
