--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -19,6 +19,9 @@ jobs:
 
       - uses: actions/checkout@v2
 
+      - name: Run code style check
+        run: ./vendor/bin/php-cs-fixer fix --dry-run
+
       - name: Validate composer.json and composer.lock
         run: composer validate
 
