--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,7 @@
 ###< symfony/phpunit-bridge ###
 
 ###> phpunit/phpunit ###
-/phpunit.xml
-.phpunit.result.cache
+/.phpunit.cache/
 ###< phpunit/phpunit ###
 
 docker-compose.override.yml
