Updating recipe for symfony/framework-bundle

--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=faee9b6e06eeb52e7211b52c7bd85266
+APP_SECRET=
 ###< symfony/framework-bundle ###
 
 ###> sentry/sentry-symfony ###
