--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": ">=8.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "nelmio/api-doc-bundle": "^5.8",
         "nelmio/cors-bundle": "^2.4",
         "phpunit/phpunit": "^12",
         "predis/predis": "^3",
@@ -45,7 +46,8 @@
     },
     "scripts": {
         "auto-scripts": {
-            "cache:clear": "symfony-cmd"
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
@@ -62,7 +64,9 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.76",
+        "symfony/asset": "7.3.*",
         "symfony/browser-kit": "7.3.*",
-        "symfony/maker-bundle": "^1.52"
+        "symfony/maker-bundle": "^1.52",
+        "symfony/twig-bundle": "7.3.*"
     }
 }
