--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "ext-iconv": "*",
         "nelmio/api-doc-bundle": "^5.8",
         "nelmio/cors-bundle": "^2.4",
+        "phpdocumentor/reflection-docblock": "^5.6",
+        "phpstan/phpdoc-parser": "^2.3",
         "phpunit/phpunit": "^12",
         "predis/predis": "^3",
         "sentry/sentry-symfony": "^5",
@@ -23,7 +25,10 @@
         "symfony/framework-bundle": "7.3.*",
         "symfony/http-client": "7.3.*",
         "symfony/phpunit-bridge": "7.3.*",
+        "symfony/property-access": "7.3.*",
+        "symfony/property-info": "7.3.*",
         "symfony/runtime": "7.3.*",
+        "symfony/serializer": "7.3.*",
         "symfony/yaml": "7.3.*"
     },
     "config": {
