--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "symfony/property-info": "7.3.*",
         "symfony/runtime": "7.3.*",
         "symfony/serializer": "7.3.*",
+        "symfony/string": "7.3.*",
         "symfony/yaml": "7.3.*"
     },
     "config": {
